Update studytub sem 5 cse

--- a/pages/5thsem/5thsemcse.html
+++ b/pages/5thsem/5thsemcse.html
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1brMkIOh8wqhv1uDjRkhKM-v2zhq-m0bc?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Advance%20Java/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1Rt1E-K1fYHYWOp1scfDCyevIwuLYtbXk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Biology%20for%20Engineers/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1u7MerumKk4b2Y-ClO_SUwX6U2QhwwXSi?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Computer%20Networks/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1_VFZJ5E04OTiMc7m7rpH9tn6ej6Y8Tqx?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Datamining%20_%20Warehousing/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1TAdUmSOz8Ht5fo4E7UrfPNQJW6QkHOa6?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Mobile%20Computing/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/15tpQwWfMB3KsNxq5-Tq4jsilV6NNJt35?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Professional%20Ethics%20_%20Values/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/17O9DD-ZHu5Sytx0sXOKub0lKXqvrN8HF?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Cse/Operating%20Systems/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
