--- a/pages/5thsemindex.html
+++ b/pages/5thsemindex.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1sR5ekv8yj9zlNEui5et_2KDaOuDerfjz?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/MIDTERM&ENDTERM-Question%20paper/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1w7tXOkW36fImcmphcJSLzn_Tn9FoDMSg?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eie/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
