Update studytub sem 5 ece

--- a/pages/5thsem/5thsemece.html
+++ b/pages/5thsem/5thsemece.html
@@ -85,7 +85,7 @@
                        
                         
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1uvOCc-Pl8zCriF97VxyUH9lwhDCaLosu?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/AC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -98,7 +98,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/111ve6it0vSI7VV5CtEiqefdP6k3JP4P1?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/Advanced%20linear%20algebra/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -111,7 +111,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1Irbiw6Y1JBDitrNR-FqhmVaR499m1UD1?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/CSE/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -124,7 +124,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/183FEZea2d18xx4JBjlPZnqgn69seMwD9?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/DBMS/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -137,7 +137,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1nzmNQ54EeYuk1I2c1MTZWtn7o5vx5Vpe?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/EMW/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -150,7 +150,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1CiW_WTMuXOKgBSeOi7pE8gmc8Um3akQI?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/SCT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -163,7 +163,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1IBxDw_WXdmiXaJerQVGRf5JEAvFG6rsX?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Ece/SS/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
