Update studytub sem 5 eee

--- a/pages/5thsem/5thsemeee.html
+++ b/pages/5thsem/5thsemeee.html
@@ -80,7 +80,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/183FEZea2d18xx4JBjlPZnqgn69seMwD9?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/DBMS/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -93,7 +93,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1Wtt-A_axtwiMWuGsa_Y_GY9yF8SUe94i?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/EMT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -106,7 +106,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1U1ZFq-yDOVd-yarQljj5wJj4fVg3x7sP?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/Machines%202/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -119,7 +119,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1WTDKWRj2ghPHZwTBlROWZ4vyt_fKF6oR?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/PE/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -132,7 +132,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1LzN3ahiyLF_l5NPVg3HR4gLiFwOHyBQa?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/RES/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -145,7 +145,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1XTlbPIEHCQkPV9Lf0K_Ph-RQh1cYoIsq?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/Thermodynamics/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -158,7 +158,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1dQtPmCctL76QLDZBsalHA0jd16AhZq3k?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eee/SNS/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
