Update studytub sem 5 cse

--- a/pages/6thsem/6thsemcse.html
+++ b/pages/6thsem/6thsemcse.html
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1HrrPka7f6nsP-So4pmxSFnE2ziMo2uBk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Cse/AI/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1RjULAjtPTeJRQd9tlCRDj1szZJKEWueA?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Cse/cloudcomputing/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1Gef9SwqKh3Ec-82fUQE6XkpsdPZreboO?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Cse/FLAT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1g0CWjP1bUHYdI9GQQZVfBsCxz7djQMpO?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Cse/ML/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1UFQWoY9tDkdnUUipJELSk2MMnTD2dtTR?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Cse/NLP/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
