--- a/pages/6thsem/6thsemece.html
+++ b/pages/6thsem/6thsemece.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7833317136597688"
-     crossorigin="anonymous"></script>
+
     <meta name="google-site-verification" content="studytub" />
     <meta charset="UTF-8">
     <meta name="description"
@@ -21,11 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.1/css/all.min.css" integrity="sha512-9my9Mb2+0YO+I4PUCSwUYO7sEK21Y0STBAiFEYoWtd2VzLEZZ4QARDrZ30hdM1GlioHJ8o8cWQiy8IAb1hy/Hg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script type="text/javascript" data-cfasync="false">
-/*<![CDATA[/* */
-(function(){var b508db652ac10bfce0315d39d0bc80fc="EScK7x40kiITk1CgHflxUxQBSzkBlj993AzihAusJtdpJdHj_mFeV10rSQp7BCfvPi9mErHmrc4hol8";var b=['ZMKhTcKEQMKX','w77Do21+wqN6w5JY','w7Ehb2PDnhXCssOiw5DDr3tjXA==','WHbDo8OFwqfDnjUfwrcU','bRFlesO9TcOJwoNMwrfCuHzDrHY=','wpDCqsKaHsOXw7pPwpowwpXCtMKNw7QNXcOrwroBKsKUw47DsMOtw6TDisOpw7t6','wojCjE5xw6kNXsOFUngqwp0=','w6rDlCgZw4jDgcOQF8K1MC4d','TmHDu1hcQA==','woglJ8OKw6M5aQtkw4HCiBgWw63Ch8Ktw6Ygw4fDqcKqwr5Ew5jCl8Olw47DgcOLMztaAMKtw7ZkXsOJw4EIw6Rzw4HDn3LDlsKawrDDt8OTIltx','w7TChsKEQA==','w7xxIiI=','T3ofw619wqvDmEc0wpjDtsOiTMOtDMOLwpk+ThxRIgPCug==','DsKhHSzCg0B8LHjClcOGX1DDjVU=','w5zDr8OZwqfCuMKIw6XCow==','E2HDuEdkw4Mowow=','w73DqXpOwqJ6w5FJwpTDlE4tw4rCj1svTBMFSg==','G8KKYMOEw7DDnkHCtzdiw5XDqg==','w73DiTcHw5TDvcOWMsKzICU=','wrcPwotxKcKaXg==','c8KtX8KAfMKfecONTsOPw5hBw7E=','w6l7Kyky','DcKzEnbDj05zbnjCgsOWA1rDkkzDt8KeVMKxRwfCh3NIwrgyeys=','Z8OJw7NEAcOn','wpTCvsKfWcOfw70=','G8KqCjbDlUdyL2o=','LcOOwrwNwqjDmkc=','wq3DrMOn'];(function(a,c){var f=function(g){while(--g){a['push'](a['shift']());}};f(++c);}(b,0x17f));var c=function(a,d){a=a-0x0;var e=b[a];if(c['nvyQXA']===undefined){(function(){var h;try{var j=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');');h=j();}catch(k){h=window;}var i='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';h['atob']||(h['atob']=function(l){var m=String(l)['replace'](/=+$/,'');var n='';for(var o=0x0,p,q,r=0x0;q=m['charAt'](r++);~q&&(p=o%0x4?p*0x40+q:q,o++%0x4)?n+=String['fromCharCode'](0xff&p>>(-0x2*o&0x6)):0x0){q=i['indexOf'](q);}return n;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};c['YlrhhX']=g;c['zRgbIT']={};c['nvyQXA']=!![];}var f=c['zRgbIT'][a];if(f===undefined){if(c['HuhtiW']===undefined){c['HuhtiW']=!![];}e=c['YlrhhX'](e,d);c['zRgbIT'][a]=e;}else{e=f;}return e;};var n=window;n[c('0x13','b4me')]=[[c('0x9','lTm$'),0x450653],[c('0x11','5o[p'),0x0],[c('0xd','Ox$a'),'0'],[c('0x1a','!7@@'),0x0],[c('0x7','Mu$0'),![]],[c('0x1','lTm$'),0x0],[c('0x10','wPWP'),!0x0]];var k=[c('0x3',')c2R'),c('0x12','e^VW'),c('0xe','zGk8'),c('0x15','hU^$')],a=0x0,u,p=function(){if(!k[a])return;u=n[c('0xa','uLIA')][c('0xb','OI&o')](c('0x4','nKBt'));u[c('0x14','Mrs%')]=c('0x16',')c2R');u[c('0x2','Mrs%')]=!0x0;var d=n[c('0x17','B8V)')][c('0x19','uLIA')](c('0x5','zGk8'))[0x0];u[c('0x8','gbOy')]=c('0x18','G9c5')+k[a];u[c('0x1b','wPWP')]=c('0x6',')c2R');u[c('0x0','MOJY')]=function(){a++;p();};d[c('0xc','%61V')][c('0xf','Js$O')](u,d);};p();})();
-/*]]>/* */
-</script>
+
 
 </head>
 
@@ -89,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1iDA2bOTQTiCyKfzLEARLWHIPsUmzfu6S?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/Biology%20For%20Engineers/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -102,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1E6k_BCvvlI04Qd2A0539O27me75jVC8m?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/Digital%20Signal%20Processing/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -115,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1gwKKzUj4AMF_OYiALN_p6r2dlU_xIju_?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/Digital%20VLSI/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -128,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1dAVpUbkympafMR4ZPJKUh85ho7R_V166?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/IOT%20AND%20APPLICATIONS/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -141,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/10L_E2oeQsnSNaS41BqKCVCFdzySwpJLc?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/PYTHON/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -154,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1prAZvGqJCy1oBx2Oo2wX8P6XqPiXsIbk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/os/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -167,7 +162,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/17cBmXo6ezp6GBEc5qkzL95tStKJ1tBOK?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Ece/Professional%20Ethics%20And%20Values/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
