Update studytub sem 5 eee

--- a/pages/6thsem/6thsemeee.html
+++ b/pages/6thsem/6thsemeee.html
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1NOFMOvSzgkynMZDLNJV1DN7acO-LU2dp?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Advance%20PE/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1OI1gQj9BwYCT4zFoSEfXAbzSNgO0zYjy?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Digital%20Signal%20Processing/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1MrtwappdwjzZIre_I-LQvEYEFP4SDhYt?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/EPTD/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1dAVpUbkympafMR4ZPJKUh85ho7R_V166?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/IOT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/10L_E2oeQsnSNaS41BqKCVCFdzySwpJLc?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/PYTHON/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1prAZvGqJCy1oBx2Oo2wX8P6XqPiXsIbk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/os/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1aktZKzVsyx0vrKYwXP0Ymrcs7J8Hii5n?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/MPMC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
