optimize header image

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <title>Studytub</title>
 
-    <link rel="icon" href="img/core-img/nanda.png">
+    <link rel="icon" href="img/core-img/nanda.webp">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +28,7 @@
 
                         <a class="navbar-brand" href="index.html"
                             style="color: rgb(207, 207, 56); font-size: 30px; font-family: 'Times New Roman', Times, serif; padding-top: 5px;"><img
-                                src="img/core-img/nanda.png" width="40px" height="40px" alt="Logo">StudyTub</a>
+                                src="img/core-img/nanda.webp" width="40px" height="40px" alt="Logo">StudyTub</a>
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#worldNav"
                             aria-controls="worldNav" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -57,7 +57,7 @@
     </header>
 
 
-    <div class="hero-area height-600 bg-img background-overlay" style="background-image: url(img/core-img/p2.png);">
+    <div class="hero-area height-600 bg-img background-overlay" style="background-image: url(img/core-img/p2.webp);">
     </div>
 
     <section class="contact-area section-padding-100">
@@ -109,7 +109,7 @@
     <footer id="dk-footer">
         <div class="container">
             <div class="sec Aboutus">
-                <h2>Study Tub<a href="#"><img src="img/core-img/nanda.png" width="50" height="50"
+                <h2>Study Tub<a href="#"><img src="img/core-img/nanda.webp" width="50" height="50"
                             style="padding-bottom: 8px;" alt=""></a></h2>
                 <span class="animate-border border-black"></span>
 
@@ -199,14 +199,7 @@
 
 
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-23581568-13');
-    </script>
+    
 </body>
 
 </html>
