--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>StudyTub</title>
-  <link rel="icon" href="img/core-img/nanda.png" />
+  <link rel="icon" href="img/core-img/nanda.webp" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.1/css/all.min.css"
@@ -29,7 +29,7 @@
   <div id="preloader">
     <div class="preload-content">
       <!-- <div id="world-load"></div> -->
-      <img src="img/core-img/nanda.png" width="400px" height="400px" alt="" srcset="" />
+      <img src="img/core-img/nanda.webp" width="400px" height="400px" alt="" srcset="" />
     </div>
   </div>
   <header class="header-area">
@@ -42,7 +42,7 @@
                   font-size: 30px;
                   font-family: 'Times New Roman', Times, serif;
                   padding-top: 5px;
-                "><img src="img/core-img/nanda.png" width="40px" height="40px" alt="Logo" />StudyTub</a>
+                "><img src="img/core-img/nanda.webp" width="40px" height="40px" alt="Logo" />StudyTub</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#worldNav"
               aria-controls="worldNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -76,10 +76,10 @@
 
   <div class="hero-area">
     <div class="hero-slides owl-carousel">
-      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p1.png)"></div>
-      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p2.png)"></div>
+      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p1.webp)"></div>
+      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p2.webp)"></div>
 
-      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p3.png)"></div>
+      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p3.webp;)"></div>
     </div>
   </div>
 
@@ -326,7 +326,7 @@
     <div class="container">
       <div class="sec Aboutus">
         <h2>
-          Study Tub<a href="#"><img src="img/core-img/nanda.png" width="50" height="50" style="padding-bottom: 8px"
+          Study Tub<a href="#"><img src="img/core-img/nanda.webp" width="50" height="50" style="padding-bottom: 8px"
               alt="" /></a>
         </h2>
         <span class="animate-border border-black"></span>
