--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p1.webp)"></div>
       <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p2.webp)"></div>
 
-      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p3.webp;)"></div>
+      <div class="single-hero-slide bg-img background-overlay" style="background-image: url(img/core-img/p3.webp)"></div>
     </div>
   </div>
 
@@ -96,7 +96,7 @@
               <a href="pages/1stsem.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem1.gif" alt="1stsem" />
+                    <img src="img/core-img/semester1.png" alt="1stsemester" />
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
               <a href="pages/1stsem.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem2.gif" alt="" />
+                    <img src="img/core-img/semester2.png" alt="2ndsemester" />
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
                 </div>
@@ -117,7 +117,7 @@
               <a href="pages/3rdsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem3.gif" alt="" />
+                    <img src="img/core-img/semester3.png" alt="3rdsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -128,7 +128,7 @@
               <a href="pages/4thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem4.gif" alt="" />
+                    <img src="img/core-img/semester4.png" alt="4thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -139,7 +139,7 @@
               <a href="pages/5thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem5.gif" alt="" />
+                    <img src="img/core-img/semester5.png" alt="5thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -150,7 +150,7 @@
               <a href="pages/6thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem6.gif" alt="" />
+                    <img src="img/core-img/semester6.png" alt="6thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -163,7 +163,7 @@
                 target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/sem7.gif" alt="" />
+                    <img src="img/core-img/semester7.png" alt="7thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
