--- a/index.html
+++ b/index.html
@@ -60,13 +60,7 @@
                 </li>
               </ul>
 
-              <!-- <div id="search-wrapper">
-                                <form action="#">
-                                    <input type="text" id="search" placeholder="Search something...">
-                                    <div id="close-icon"></div>
-                                    <input class="d-none" type="submit" value="">
-                                </form>
-                            </div> -->
+             
             </div>
           </nav>
         </div>
@@ -96,7 +90,7 @@
               <a href="pages/1stsem.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester1.png" alt="1stsemester" />
+                    <img src="img/core-img/semester1.webp" alt="1stsemester" />
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
                 </div>
@@ -107,7 +101,7 @@
               <a href="pages/1stsem.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester2.png" alt="2ndsemester" />
+                    <img src="img/core-img/semester2.webp" alt="2ndsemester" />
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
                 </div>
@@ -117,7 +111,7 @@
               <a href="pages/3rdsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester3.png" alt="3rdsemester" />
+                    <img src="img/core-img/semester3.webp" alt="3rdsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -128,7 +122,7 @@
               <a href="pages/4thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester4.png" alt="4thsemester" />
+                    <img src="img/core-img/semester4.webp" alt="4thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -139,7 +133,7 @@
               <a href="pages/5thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester5.png" alt="5thsemester" />
+                    <img src="img/core-img/semester5.webp" alt="5thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -150,7 +144,7 @@
               <a href="pages/6thsemindex.html" target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester6.png" alt="6thsemester" />
+                    <img src="img/core-img/semester6.webp" alt="6thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
@@ -163,7 +157,7 @@
                 target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
-                    <img src="img/core-img/semester7.png" alt="7thsemester" />
+                    <img src="img/core-img/semester7.webp" alt="7thsemester" />
 
                     <div class="post-content d-flex align-items-center justify-content-between"></div>
                   </div>
