--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="google-site-verification" content="studytub" />
   <meta charset="UTF-8" />
+  <link rel="manifest" href="manifest.json">
   <meta name="description"
     content="Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else" />
   <meta name="keywords" content="Studytub Notes Cloudflare Noteshub studytub engineeringnotes engineer engineering" />
