--- a/index.html
+++ b/index.html
@@ -400,7 +400,15 @@
       </p>
     </div>
   </footer>
-
+  <script>
+if ("serviceWorker" in navigator) {
+    // register service worker
+    navigator.serviceWorker.register("service-worker.js");
+  }
+  </script>
+  
+  
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
   <script src="js/jquery/jquery-2.2.4.min.js"></script>
 
